Make like 5 more awesome :)

--- a/_posts/0000-01-02-jackie17313.md
+++ b/_posts/0000-01-02-jackie17313.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to jackie17313's slide!"
 ---
-This is my awesome slide! <br>
+This is my awesome slide! :tada: <br>
 Use the left arrow to go back!
